# chronon

./: .cursorrules  .gitignore  .scalafmt.conf  CLAUDE.md  README.md  agents.md  build.mill  build_all_jars.sh  example_graph.json  pyproject.toml  staging_query_submit.sh
local_deployment/chronon-ui/: .dockerignore  DEVELOPMENT.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vite.config.ts
local_deployment/chronon-ui/client/: Dockerfile  index.html
local_deployment/chronon-ui/client/src/: App.tsx  index.css
local_deployment/chronon-ui/client/src/components/: AppSidebar.tsx  LineageGraph.tsx  LineageNode.tsx  ThemeToggle.tsx
local_deployment/chronon-ui/client/src/context/: ActionDateContext.tsx  ComputeEngineContext.tsx  TeamContext.tsx
local_deployment/chronon-ui/client/src/hooks/: use-team-metadata.ts  use-teams.ts
local_deployment/chronon-ui/client/src/lib/: queryClient.ts
local_deployment/chronon-ui/client/src/pages/: BatchDataPage.tsx  BatchDataPageV2.tsx  (+4 more)
local_deployment/chronon-ui/server/: Dockerfile  config.py  env.template  main.py  pyproject.toml
local_deployment/chronon-ui/server/routes/: __init__.py
local_deployment/chronon-ui/server/scripts/: emr_chronon_starter.py
local_deployment/chronon-ui/server/services/: confparser.py  datascanner.py  datascanner_base.py  datascanner_local.py  dynamodb.py  graphparser.py  kinesis.py  runner.py  teamparser.py
local_deployment/chronon-ui/server/tests/: test_confparser.py  test_datascanner.py  test_graphparser.py  test_spark_data_routes.py  test_teamparser.py
(+673 files in other folders)
