[project]
name = "chronon-zipline-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.64",
    "docker>=7.1.0",
    "duckdb>=1.4.1",
    "fastapi[standard]>=0.119.0",
    "pandas>=2.0.0",
    "pytest>=8.4.2",
]
